load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "apiserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/ray-project/ray/go/apiserver",
    visibility = ["//visibility:public"],
    deps = [
        "//go/apiserver/proto",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)

go_binary(
    name = "apiserver",
    embed = [":apiserver_lib"],
    visibility = ["//visibility:public"],
)
